# inferna

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  REVIEW.md  TODO.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: _gpu-build-cuda-windows.yml  _gpu-build-cuda.yml  _gpu-build-rocm.yml  _gpu-build-sycl.yml  _gpu-build-vulkan-linux.yml  _gpu-build-vulkan-macos-intel.yml  _gpu-build-vulkan-windows.yml  _gpu-smoke.yml  build-cibw-abi3.yml  build-cibw.yml  build-gpu-wheels-abi3-v2.yml  build-gpu-wheels-abi3.yml  build-gpu-wheels-v2.yml  build-gpu-wheels.yml  build-new-wheels.yml  check-vendor.yml  ci-pr.yml
agents_overview/: index.html
api_reference/: index.html
assets/: architecture.d2
build_backends/: index.html
build_options/: index.html
cancelling/: index.html
cli-cheatsheet/: index.html
context_caching/: index.html
cookbook/: index.html
docs/: agents_overview.md  api_reference.md  build_backends.md  build_options.md  cancelling.md  cli-cheatsheet.md  context_caching.md  cookbook.md  examples.md  improvements_summary.md  index.md  installation.md  intro.md  mcp.md  overview.md  quickstart.md  rag_advanced.md  rag_embedder.md  rag_overview.md  rag_pipeline.md  rag_text_processing.md  rag_vectorstore.md  server_usage_examples.md  stable_diffusion.md  summary.md  threading.md  troubleshooting.md  user_guide.md  whisper.md
docs/dev/: 0.2.1-release-issue.md  abi3.md  build-options.md  chat_templates.md  cuda-double-free.md  ggml-config.md  ggml-unification.md  ggml_max_name.md  mcp.md  nanobind.md  new-vulkan.md  onnx-integration.md  packaging-options.md  packaging.md  runtime-guard.md  scaling_rag.md  single-binary.md  sqlite_db.md  static-vs-dynamic.md  test-cleanup.md  windows-cuda.md
examples/: index.html
improvements_summary/: index.html
installation/: index.html
intro/: index.html
mcp/: index.html
overview/: index.html
quickstart/: index.html
rag_advanced/: index.html
rag_embedder/: index.html
rag_overview/: index.html
rag_pipeline/: index.html
rag_text_processing/: index.html
rag_vectorstore/: index.html
scripts/: ci_rename_package.py  ci_smoke.py  funcs_py.sh  git-log.sh  leak_check.py  manage.py  run_wheel_test.py  vendor_jinja2.sh
scripts/case/: embed1.sh  rag-chat-qwen3-db.sh  rag-chat-qwen3.sh  transcribe1.sh  z_turbo_1.sh  z_turbo_1c.sh  z_turbo_2.sh  z_turbo_2c.sh  z_turbo_3c.sh
scripts/patches/: README.md
search/: search_index.json
server_usage_examples/: index.html
src/inferna/: __init__.py  __main__.py  api.py  batching.py  defaults.py  memory.py
src/inferna/_internal/: __init__.py  backend_dl.py  build_config.py  chat_template.py  function_calling.py  mcp_facade.py  readline.py  response_cache.py  structured.py
src/inferna/_vendor/: README.md  __init__.py
src/inferna/_vendor/jinja2/: compiler.py  environment.py  ext.py  filters.py  nodes.py  runtime.py  sandbox.py  utils.py
src/inferna/agents/: README.md  __init__.py  acp.py  async_agent.py  cli.py  constrained.py  contract.py  grammar.py  jsonrpc.py  mcp.py  react.py  session.py  tools.py  types.py
src/inferna/common/: backend_loader.hpp  busy_lock.hpp
src/inferna/integrations/: __init__.py  langchain.py  langchain_agents.py  openai_agents.py  openai_compat.py
src/inferna/llama/: __init__.py  _llama_native.cpp  _llama_native.hpp  _llama_native_enums.cpp  _llama_native_mtmd.cpp  _llama_native_tts.cpp  _python_helpers.py  _speculative.py  chat.py  cli.py  llama_cpp.py  log.py  tts.py
src/inferna/llama/helpers/: json_schema.cpp  json_schema.h  tts.cpp  tts.h
src/inferna/llama/mtmd/: __init__.py  multimodal.py
src/inferna/llama/server/: __init__.py  __main__.py  _mongoose.cpp  embedded.py  launcher.py  python.py  (+1 more)
src/inferna/rag/: __init__.py  advanced.py  embedder.py  loaders.py  pipeline.py  rag.py  repetition.py  splitter.py  store.py  types.py
src/inferna/sd/: __init__.py  __main__.py  _sd_native.cpp  stable_diffusion.py  stb_impl.cpp
src/inferna/utils/: __init__.py  color.py  json_schema_to_grammar.py  log.py  platform.py  validation.py
src/inferna/whisper/: __init__.py  _whisper_native.cpp  cli.py  streaming.py  whisper_cpp.py
stable_diffusion/: index.html
summary/: index.html
tests/: conftest.py  test_acp.py  test_agents_constrained.py  test_agents_contract.py  test_agents_grammar.py  test_agents_react.py  test_agents_tools.py  test_api_cache.py  test_api_mcp.py  test_async_agents.py  test_async_api.py  test_batching.py  test_cancel.py  test_chat.py  test_cli.py  test_comprehensive.py  test_context.py  test_download.py  test_error_messages.py  test_function_calling.py  test_generate.py  test_gguf.py  test_integrations.py  test_integrations_agents.py  test_jinja_chat.py  test_json_schema.py  test_jsonrpc.py  test_logprobs.py  test_lora_embed.py  test_main.py  test_mcp.py  test_memory.py  test_memory_leaks.py  test_model.py  test_mserver_embedded.py  test_mtmd.py  test_ngram_cache.py  test_params.py  test_platform.py  test_prompt_cache.py  (+25 more)
tests/callbacks/: run_cheese.py  setup.py
tests/examples/: agent_code_assistant.py  agent_code_formatter.py  agent_contract_example.py  agent_data_analyst.py  agent_example.py  agent_researcher.py  agent_web_scraper.py  constrained_agent_example.py  debug_mongoose_shutdown.py  debug_start_simple.py  download_example.py  framework_integration_examples.py  gguf_example.py  json_schema_example.py  minimal_mongoose_test.py  mongoose_simple_demo.py  multimodal_example.py  ngram_cache_example.py  progress_callback_example.py  rag_agent_example.py  rag_basic_example.py  rag_document_indexing_example.py  rag_hybrid_search_example.py  rag_streaming_example.py  sd_advanced_example.py  sd_example.py  server_comparison_demo.py  server_example.py  server_simple.py  speculative_example.py
tests/media/: corpus1.txt
tests/web/http-restful-server/: Makefile  README.md
tests/web/http-server/: main.c
tests/web/multi-threaded/: Makefile  README.md
threading/: index.html
troubleshooting/: index.html
user_guide/: index.html
whisper/: index.html
(+2 files in other folders)
